Remove fixed bar, add overflow to main

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 	display: flex;
 	justify-content: flex-end;
 	align-items: flex-start;
-	padding: .3rem
+	padding: .3rem;
 }
 
 .top-buttons .btn {
@@ -45,9 +45,11 @@ body {
 /* Grid */
 
 main {
-	min-height: calc(100vh - 9rem);
-	margin-bottom: 5rem;
+	height: calc(100vh - 9rem);
 	padding-bottom: 1rem;
+
+	overflow-y: auto;
+	overflow-x: hidden;
 	
 	display: flex;
 	flex-wrap: wrap;
@@ -57,7 +59,6 @@ main {
 
 .participant {
 	position: relative;
-	height: 140px;
 	margin: .2rem;
 }
 
@@ -82,12 +83,10 @@ main {
 
 footer {
 	height: 5rem;
-	width: 100%;
-	position: fixed;
-	bottom: 0;
-	left: 0;
+
 	background: var(--grey);
-	z-index: 1;
+
+	overflow: hidden;
 
 	display: flex;
 	justify-content: space-between;
@@ -109,6 +108,7 @@ footer .btn {
 	line-height: 5rem;
 	color: red;
 	padding: 0 1rem;
+	white-space: nowrap;
 }
 
 .arrow {
